--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,66 @@
 .title {
-  margin-left: 26px;
+  margin-left: 16px;
 }
 
 .section {
   margin-top: 24px;
+  gap: 32px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.filmCard {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.imageBlock {
+  height: 300px;
+  border-radius: 8px;
+  position: relative;
+
+  img {
+    width: 100%;
+    border-radius: 8px;
+    height: 300px;
+    text-align: center;
+    line-height: 50px;
+
+    object-fit: fill;
+  }
+
+  .info {
+    padding: 8px 16px;
+    background: var(--bg-secondary);
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-radius: 8px 0 0 0;
+
+    text-align: right;
+  }
+}
+
+.descriptionSection {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+
+  .description {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+}
+
+.rating {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
