--- a/src/static/styles/variables.scss
+++ b/src/static/styles/variables.scss
@@ -10,6 +10,7 @@
   --text-quaternary: #97a1af;
   --text-invert: #ffffff;
 
+  --indicator-normal: #141c24;
   --indicator-light: #ced2da;
   --indicator-medium: #97a1af;
   --indicator-extralight: #e3e5e5;
