--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -48,17 +48,14 @@
     font-size: 16px;
     line-height: 24px;
     color: var(--text-secondary);
+    fill: var(--indicator-normal);
     cursor: pointer;
 
     &:active,
     &:hover,
     &:focus {
       color: var(--brand);
-    }
-
-    svg {
-      width: 24px;
-      height: 24px;
+      fill: var(--brand);
     }
   }
 }
