--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,7 @@
+.main {
+  margin-top: 48px;
+}
+
 .title {
   margin-left: 16px;
 }
@@ -14,36 +18,6 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
-
-.imageBlock {
-  height: 300px;
-  border-radius: 8px;
-  position: relative;
-
-  img {
-    width: 100%;
-    border-radius: 8px;
-    height: 300px;
-    text-align: center;
-    line-height: 50px;
-
-    object-fit: fill;
-  }
-
-  .info {
-    padding: 8px 16px;
-    background: var(--bg-secondary);
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    border-radius: 8px 0 0 0;
-
-    text-align: right;
-  }
 }
 
 .descriptionSection {
