--- a/src/pages/Film/components/Place/Place.module.scss
+++ b/src/pages/Film/components/Place/Place.module.scss
@@ -16,6 +16,7 @@
   flex-direction: column;
   gap: 24px;
   width: 100%;
+  margin-right: 55px;
 
   .placeHeader {
     display: flex;
@@ -51,28 +52,40 @@
     .row {
       display: flex;
       gap: 24px;
+      align-items: center;
 
       span {
         text-align: center;
         width: 16px;
       }
 
-      .blockedPlace {
+      button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 16px;
         height: 16px;
         border-radius: 4px;
         padding: 2px 0;
         border: none;
+      }
+
+      .blockedPlace {
         background-color: var(--indicator-light);
       }
 
       .freePlace {
-        width: 16px;
-        height: 16px;
-        border-radius: 4px;
-        padding: 2px 0;
-        border: none;
         background-color: var(--brand);
+      }
+
+      .activePlace {
+        background-color: var(--brand);
+        color: var(--text-invert);
+        border-radius: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px 14px;
       }
     }
   }
@@ -80,4 +93,15 @@
 
 .buyTickets {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  justify-items: center;
+  margin-top: 30px;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+  }
 }
